tests/mm0_mmu/fail/bad-sort42.mmu
-- free should be after strict
(sort s42 free strict)